chore: update snap

--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -22,7 +22,7 @@
     "dev": "npm run dev:weapp",
     "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
     "dev:write": "cross-env WRITE=1 npm run dev:weapp",
-    "build": "npm run build:weapp",
+    "build": "cross-env BABEL=1 npm run build:weapp",
     "build:babel": "cross-env BABEL=1 npm run build:weapp",
     "build:local": "cross-env LOCAL=1 npm run build:weapp",
     "build:weapp": "taro build --type weapp",
@@ -55,33 +55,33 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@nutui/nutui-taro": "^4.3.9",
-    "@tarojs/components": "4.0.8",
-    "@tarojs/plugin-framework-vue3": "4.0.8",
-    "@tarojs/plugin-html": "4.0.8",
-    "@tarojs/plugin-platform-h5": "4.0.8",
-    "@tarojs/runtime": "4.0.8",
-    "@tarojs/taro": "4.0.8",
+    "@tarojs/components": "3.6.35",
+    "@tarojs/plugin-framework-vue3": "3.6.35",
+    "@tarojs/plugin-html": "3.6.35",
+    "@tarojs/plugin-platform-h5": "3.6.35",
+    "@tarojs/runtime": "3.6.35",
+    "@tarojs/taro": "3.6.35",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-syntax-decorators": "^7.24.7",
-    "@tarojs/cli": "4.0.8",
+    "@tarojs/cli": "3.6.35",
     "@tarojs/mini-runner": "3.6.35",
-    "@tarojs/webpack5-runner": "^4.0.8",
+    "@tarojs/webpack5-runner": "^3.6.35",
     "@types/webpack-env": "^1.18.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/compiler-sfc": "^3.5.13",
     "@weapp-tailwindcss/cli": "^3.0.0",
     "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.19",
-    "babel-preset-taro": "4.0.8",
+    "babel-preset-taro": "3.6.35",
     "cross-env": "^7.0.3",
     "eslint": "^9.17.0",
-    "eslint-config-taro": "4.0.8",
+    "eslint-config-taro": "3.6.35",
     "eslint-plugin-vue": "^9.32.0",
     "less": "^4.2.0",
     "postcss": "^8.4.49",
@@ -91,8 +91,8 @@
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~5.7.2",
-    "unplugin-vue-components": "^0.28.0",
+    "typescript": "~5.7.3",
+    "unplugin-vue-components": "^28.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^2.0.8",
     "weapp-tailwindcss": "^3.8.0-alpha.0",
