--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "@commitlint/prompt-cli": "^19.7.0",
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.7.1",
-    "@icebreakers/eslint-config": "^0.7.9",
-    "@icebreakers/monorepo": "^0.6.21",
+    "@icebreakers/eslint-config": "^0.7.10",
+    "@icebreakers/monorepo": "^0.6.22",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.1.3",
     "@rollup/plugin-alias": "^5.1.1",
@@ -189,9 +189,9 @@
     "html-loader": "^5.1.0",
     "husky": "^9.1.7",
     "js-beautify": "^1.15.1",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "klaw": "^4.1.0",
-    "lightningcss": "^1.28.2",
+    "lightningcss": "^1.29.0",
     "lint-staged": "^15.3.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -201,7 +201,7 @@
     "normalize-newline": "^4.1.0",
     "npm-registry-fetch": "^18.0.2",
     "only-allow": "^1.2.1",
-    "pathe": "^2.0.0",
+    "pathe": "^2.0.1",
     "pkg-types": "^1.3.0",
     "postcss": "^8.4.49",
     "postcss-js": "^4.0.1",
@@ -227,14 +227,15 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "turbo": "^2.3.3",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "unbuild": "^3.2.0",
     "uuid": "^11.0.4",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
     "vite": "^6.0.7",
-    "vite-plugin-inspect": "^0.10.6",
+    "vite-plugin-inspect": "^10.0.6",
     "vitest": "~2.1.8",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-build-utils": "^0.0.7",
