--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -15,7 +15,8 @@
   "keywords": [],
   "sideEffects": false,
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./types": "./src/types.ts"
   },
   "files": [
     "dist"
