--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -41,21 +41,21 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-app-harmony": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-components": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4040420241231001",
+    "@dcloudio/uni-app": "3.0.0-4040520250104002",
+    "@dcloudio/uni-app-harmony": "3.0.0-4040520250104002",
+    "@dcloudio/uni-app-plus": "3.0.0-4040520250104002",
+    "@dcloudio/uni-components": "3.0.0-4040520250104002",
+    "@dcloudio/uni-h5": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-jd": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-lark": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-qq": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4040520250104002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4040520250104002",
     "@weapp-core/escape": "^2.1.0",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
@@ -73,10 +73,10 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4040420241231001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4040420241231001",
+    "@dcloudio/uni-automator": "3.0.0-4040520250104002",
+    "@dcloudio/uni-cli-shared": "3.0.0-4040520250104002",
+    "@dcloudio/uni-stacktracey": "3.0.0-4040520250104002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4040520250104002",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
@@ -99,7 +99,7 @@
     "typescript": "~5.4.2",
     "vite": "5.2.8",
     "weapp-ide-cli": "^2.0.9",
-    "weapp-tailwindcss": "^4.0.0-alpha.4",
+    "weapp-tailwindcss": "^4.0.0-alpha.5",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22",
