--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "ge",
   "scripts": {
-    "dev": "cross-env NODE_ENV=production npm run dev:weapp",
+    "dev": "cross-env NODE_ENV=production BABEL=1 npm run dev:weapp",
     "_": " DEBUG=weapp-tw",
     "dev:local": "cross-env LOCAL=1 WRITE=1 npm run dev:weapp",
     "dev:write": "cross-env WRITE=1 npm run dev:weapp",
@@ -40,10 +40,10 @@
   "author": "ice breaker <1324318532@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.26.0",
-    "@tarojs/components": "4.0.8",
-    "@tarojs/react": "4.0.8",
-    "@tarojs/runtime": "4.0.8",
-    "@tarojs/taro": "4.0.8",
+    "@tarojs/components": "4.0.9",
+    "@tarojs/react": "4.0.9",
+    "@tarojs/runtime": "4.0.9",
+    "@tarojs/taro": "4.0.9",
     "antd-mobile": "^5.38.1",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
@@ -54,33 +54,33 @@
     "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@tarojs/cli": "4.0.8",
+    "@tarojs/cli": "4.0.9",
     "@tarojs/mini-runner": "3.6.35",
-    "@tarojs/plugin-framework-react": "^4.0.8",
-    "@tarojs/plugin-platform-h5": "^4.0.8",
+    "@tarojs/plugin-framework-react": "^4.0.9",
+    "@tarojs/plugin-platform-h5": "^4.0.9",
     "@tarojs/webpack-runner": "3.6.35",
-    "@tarojs/webpack5-runner": "4.0.8",
-    "@types/react": "^18.3.12",
+    "@tarojs/webpack5-runner": "4.0.9",
+    "@types/react": "^19.0.7",
     "@types/webpack-env": "^1.18.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@weapp-tailwindcss/cli": "^3.0.0",
     "@weapp-tailwindcss/merge": "^1.0.0-alpha.2",
     "autoprefixer": "^10.4.20",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-taro": "4.0.8",
+    "babel-preset-taro": "4.0.9",
     "create-functional-loader": "^0.1.4",
     "cross-env": "^7.0.3",
-    "eslint": "^9.17.0",
-    "eslint-config-taro": "4.0.8",
+    "eslint": "^9.18.0",
+    "eslint-config-taro": "4.0.9",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "less": "^4.2.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
-    "stylelint": "16.12.0",
+    "stylelint": "16.13.2",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^5.0.2",
