--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "diff": "^7.0.0",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
+    "es-toolkit": "^1.31.0",
     "eslint": "^9.18.0",
     "execa": "^9.5.2",
     "express": "^4.21.2",
