--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -18,16 +18,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/model-viewer": "^4.0.0",
-    "echarts": "^5.6.0",
     "vue": "^3.5.13",
-    "vue-echarts": "7.0.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "4.0.0-beta.8",
+    "@tailwindcss/vite": "4.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "tailwindcss": "4.0.0-alpha.31",
+    "tailwindcss": "4.0.0",
+    "unplugin-vue-router": "^0.11.1",
     "vite": "^6.0.11",
     "vue-tsc": "^2.2.0"
   }
