chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build:vite-docs": "turbo run build --filter=./website-weapp-vite/",
     "build:tw-docs": "turbo run build --filter=./website/",
     "build:apps": "turbo run build --filter=./apps/*",
-    "test": "vitest run --coverage.enabled --coverage.all=false",
+    "test": "vitest run",
     "test:plugins": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/*",
     "test:cli": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/cli",
     "test:typography": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/typography",
