--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -60,7 +60,7 @@
     "sass": "^1.83.1",
     "sass-loader": "^16.0.4",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.7.3",
