--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -50,7 +50,7 @@
     "rax-app": "3.8.22",
     "stylelint": "^16.13.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.9",
