--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -82,7 +82,7 @@
     "postcss-rpx-transform": "^1.0.1",
     "stylelint": "16.13.2",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.11",
