--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -95,7 +95,7 @@
     "style-loader": "3.3.4",
     "stylelint": "^16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "3",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.5",
