--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -15,16 +15,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gen": "tsx ./scripts/index.ts"
   },
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "4.0.1",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "4.0.3",
     "@vitejs/plugin-vue": "^5.2.1",
-    "tailwindcss": "4.0.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "4.0.3",
     "unplugin-vue-router": "^0.11.2",
     "vite": "^6.0.11",
     "vue-tsc": "^2.2.0"
