--- a/apps/vite-native/package.json
+++ b/apps/vite-native/package.json
@@ -30,11 +30,13 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.3",
     "tailwindcss-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-vite": "^2.1.1"
+    "weapp-vite": "^2.1.2"
   }
 }
