--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -59,13 +59,10 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
-    "@csstools/postcss-cascade-layers": "^5.0.1",
-    "@csstools/postcss-color-mix-function": "^3.0.7",
-    "@csstools/postcss-is-pseudo-class": "^5.0.1",
-    "@csstools/postcss-oklab-function": "^4.0.7",
     "@weapp-core/escape": "~4.0.0",
     "@weapp-tailwindcss/shared": "workspace:*",
     "postcss": "~8.5.1",
+    "postcss-preset-env": "^10.1.3",
     "postcss-rem-to-responsive-pixel": "~6.0.2",
     "postcss-selector-parser": "~7.0.0"
   },
