--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.12.3",
+  "packageManager": "pnpm@9.15.2",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -100,9 +100,9 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@ast-grep/napi": "^0.34.3",
-    "@babel/core": "^7.26.7",
-    "@babel/generator": "~7.26.5",
+    "@ast-grep/napi": "0.34.3",
+    "@babel/core": "^7.26.8",
+    "@babel/generator": "~7.26.8",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.12",
     "@commitlint/cli": "^19.7.1",
@@ -110,9 +110,9 @@
     "@commitlint/prompt-cli": "^19.7.1",
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^1.0.0",
-    "@icebreakers/eslint-config": "^0.7.13",
-    "@icebreakers/monorepo": "^0.6.22",
-    "@icebreakers/stylelint-config": "^0.1.4",
+    "@icebreakers/eslint-config": "^1.0.0",
+    "@icebreakers/monorepo": "^0.7.1",
+    "@icebreakers/stylelint-config": "^1.0.0",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
@@ -179,7 +179,7 @@
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
     "es-toolkit": "^1.32.0",
-    "eslint": "^9.19.0",
+    "eslint": "^9.20.0",
     "execa": "^9.5.2",
     "express": "^4.21.2",
     "fast-glob": "^3.3.3",
@@ -188,8 +188,8 @@
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
-    "husky": "^9.1.7",
-    "js-beautify": "^1.15.1",
+    "husky": "^9.1.6",
+    "js-beautify": "^1.15.2",
     "jsdom": "^26.0.0",
     "klaw": "^4.1.0",
     "lightningcss": "^1.29.1",
@@ -212,7 +212,7 @@
     "prettier": "^3.4.2",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
-    "rollup": "^4.34.5",
+    "rollup": "^4.34.6",
     "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.84.0",
     "sass-embedded": "^1.83.4",
@@ -224,7 +224,7 @@
     "terser-webpack-plugin": "^5.3.11",
     "ts-morph": "^25.0.1",
     "tsd": "^0.31.2",
-    "tslib": "^2.8.1",
+    "tslib": "^2.8.0",
     "tsup": "^8.3.6",
     "tsx": "^4.19.2",
     "turbo": "^2.4.0",
