--- a/apps/vite-native/package.json
+++ b/apps/vite-native/package.json
@@ -34,7 +34,7 @@
     "@tailwindcss/vite": "^4.0.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.4",
+    "tailwindcss": "catalog:tailwindcss4",
     "tailwindcss-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*",
     "weapp-vite": "^2.1.3"
