--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -28,7 +28,7 @@
     "@tailwindcss/vite": "4.0.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "postcss": "^8.5.1",
-    "tailwindcss": "4.0.3",
+    "tailwindcss": "catalog:tailwindcss4",
     "unplugin-vue-router": "^0.11.2",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
