chore(demo): upgrade

--- a/demo/gulp-app/tsconfig.json
+++ b/demo/gulp-app/tsconfig.json
@@ -20,5 +20,10 @@
         "./miniprogram_npm/@vant/weapp/dist/*"
       ]
     }
+  },
+  "ts-node": {
+    "moduleTypes": {
+      "gulpfile.ts": "cjs"
+    }
   }
 }
