--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -54,7 +54,6 @@
     "@types/gulp-sass": "^5.0.4",
     "@types/gulp-util": "^3.0.41",
     "@types/node": "^22.10.7",
-    "@weapp-tailwindcss/cli": "^3.0.0",
     "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
@@ -86,6 +85,7 @@
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^2.0.10",
     "weapp-tailwindcss": "^4.0.0-alpha.13",
