--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -64,7 +64,7 @@
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
-    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
+    "@weapp-tailwindcss/merge": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.0.9",
@@ -87,7 +87,7 @@
     "terser-webpack-plugin": "^5.3.11",
     "typescript": "~5.7.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.0-alpha.13",
+    "weapp-tailwindcss": "^4.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-chain": "^6.5.1"
