--- a/tailwindcss-weapp/package.json
+++ b/tailwindcss-weapp/package.json
@@ -49,60 +49,62 @@
     "weapp:login": "weapp login",
     "upload:dev": "weapp upload -p dist/dev/mp-weixin -v 1.0.0 -d \"dev version\"",
     "upload:build": "weapp upload -p dist/build/mp-weixin -v 1.0.0 -d \"release version\"",
-    "postinstall": "weapp-tw patch"
+    "postinstall": "weapp-tw patch",
+    "up:pkg": "pnpm up -rLi \"!@dcloudio/*\" --ignore-workspace",
+    "up:uniapp": "pnpx @dcloudio/uvm@latest --ignore-workspace"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4020920240930001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4020920240930001",
-    "@dcloudio/uni-app-plus": "3.0.0-4020920240930001",
-    "@dcloudio/uni-components": "3.0.0-4020920240930001",
-    "@dcloudio/uni-h5": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4020920240930001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4020920240930001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4020920240930001",
-    "@vue/shared": "^3.5.4",
+    "@dcloudio/uni-app": "3.0.0-4040520250104002",
+    "@dcloudio/uni-app-harmony": "3.0.0-4040520250104002",
+    "@dcloudio/uni-app-plus": "3.0.0-4040520250104002",
+    "@dcloudio/uni-components": "3.0.0-4040520250104002",
+    "@dcloudio/uni-h5": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-jd": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-lark": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-qq": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4040520250104002",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4040520250104002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4040520250104002",
+    "@vue/shared": "^3.5.13",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.12",
-    "pinia": "~2.1.7",
+    "pinia": "~2.3.1",
     "tailwindcss-core-plugins-extractor": "^0.2.0",
     "uni-app-mp-html": "^2.5.0",
-    "uview-plus": "^3.3.31",
-    "vue": "^3.5.12",
-    "vue-i18n": "^9.14.1"
+    "uview-plus": "^3.3.68",
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.14.2"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.14",
-    "@dcloudio/uni-automator": "3.0.0-4020920240930001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4020920240930001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4020920240930001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4020920240930001",
-    "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify-json/ci": "^1.1.13",
-    "@iconify-json/logos": "^1.1.43",
-    "@iconify-json/mdi": "^1.2.0",
-    "@iconify-json/ri": "^1.2.0",
-    "@iconify-json/svg-spinners": "^1.2.0",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@vue/runtime-core": "^3.5.12",
+    "@dcloudio/uni-automator": "3.0.0-4040520250104002",
+    "@dcloudio/uni-cli-shared": "3.0.0-4040520250104002",
+    "@dcloudio/uni-stacktracey": "3.0.0-4040520250104002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4040520250104002",
+    "@egoist/tailwindcss-icons": "^1.9.0",
+    "@iconify-json/ci": "^1.2.2",
+    "@iconify-json/logos": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/ri": "^1.2.5",
+    "@iconify-json/svg-spinners": "^1.2.2",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@vue/runtime-core": "^3.5.13",
     "autoprefixer": "^10.4.20",
-    "miniprogram-api-typings": "^3.12.3",
-    "postcss": "^8.4.45",
-    "postcss-pxtransform": "^4.0.4",
+    "miniprogram-api-typings": "^4.0.5",
+    "postcss": "^8.5.2",
+    "postcss-pxtransform": "^4.0.9",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "unplugin-auto-import": "^0.18.2",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17",
+    "unplugin-auto-import": "^19.0.0",
     "vite": "5.2.8",
     "vue-eslint-parser": "^9.4.3",
-    "weapp-ide-cli": "^2.0.3",
-    "weapp-tailwindcss": "^3.5.2"
+    "weapp-ide-cli": "^2.0.10",
+    "weapp-tailwindcss": "^4.0.0"
   }
 }
