--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -16,7 +16,7 @@
   "license": "",
   "dependencies": {},
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
+    "@weapp-tailwindcss/merge": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "miniprogram-api-typings": "^4.0.1",
     "postcss": "^8.4.49",
@@ -27,7 +27,7 @@
     "tailwindcss-patch": "^6.0.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.3-alpha.3",
+    "weapp-tailwindcss": "^4.0.3",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-vite": "^2.0.1"
   },
