--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@rollup/pluginutils": "^5.1.4",
     "@tsconfig/recommended": "^1.0.8",
+    "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.6",
     "@types/debug": "^4.1.12",
@@ -145,7 +146,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.5",
     "@types/npm-registry-fetch": "^8.0.7",
     "@types/postcss-js": "^4.0.4",
     "@types/semver": "^7.5.8",
@@ -177,7 +178,7 @@
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
     "es-toolkit": "^1.32.0",
-    "eslint": "^9.20.1",
+    "eslint": "^9.21.0",
     "execa": "^9.5.2",
     "express": "^4.21.2",
     "fast-glob": "^3.3.3",
@@ -208,7 +209,7 @@
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.4",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.5.1",
+    "prettier": "^3.5.2",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.34.8",
