chore(demo): [Bug]: [vite:css] [plugin vite:css] [sass] undefined #587

--- a/demo/taro-app-vite/project.private.config.json
+++ b/demo/taro-app-vite/project.private.config.json
@@ -3,5 +3,18 @@
   "projectname": "taro-app-vite",
   "setting": {
     "compileHotReLoad": true
+  },
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "pages/index/test",
+          "pathName": "pages/index/test",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
   }
 }
