--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -48,7 +48,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
+    "@babel/runtime": "^7.26.9",
     "@tarojs/components": "4.0.9",
     "@tarojs/helper": "4.0.9",
     "@tarojs/plugin-framework-react": "4.0.9",
@@ -68,7 +68,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
+    "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-react": "^7.26.3",
     "@tarojs/cli": "4.0.9",
@@ -78,25 +78,23 @@
     "@weapp-tailwindcss/merge": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "babel-preset-taro": "4.0.9",
-    "eslint": "^9.18.0",
+    "eslint": "^9.21.0",
     "eslint-config-taro": "4.0.9",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "react-refresh": "^0.16.0",
-    "sass": "^1.83.4",
-    "stylelint": "^16.13.2",
-    "tailwind-css-variables-theme-generator": "^0.4.0",
+    "sass": "^1.85.0",
+    "stylelint": "^16.14.1",
     "tailwindcss": "3",
     "tailwindcss-patch": "^6.0.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "terser": "^5.37.0",
+    "terser": "^5.39.0",
     "typescript": "^5.7.3",
-    "vite": "^6.0.7",
+    "vite": "^6.1.1",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.3",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss": "^4.0.3"
   }
 }
