--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -55,7 +55,7 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.21",
     "@mpxjs/webpack-plugin": "^2.9.71",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.0.0",
+    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -77,7 +77,7 @@
     "typescript": "^5.7.3",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.3",
+    "weapp-tailwindcss": "^4.0.4-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   },
