--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.18",
-    "@weapp-tailwindcss/merge": "^1.0.0",
+    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
@@ -53,7 +53,7 @@
     "tailwindcss-patch": "^6.0.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.3",
+    "weapp-tailwindcss": "^4.0.4-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "originTemplate": "@rax-materials/scaffolds-app-ts"
