--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -15,14 +15,14 @@
     "tailwindcss": "3"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/merge": "^1.0.0",
+    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss-patch": "^6.0.8",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.3",
+    "weapp-tailwindcss": "^4.0.4-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22",
