--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.14",
-    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
+    "@weapp-tailwindcss/merge": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "babel-plugin-lodash": "^3.3.4",
@@ -64,7 +64,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.4-alpha.0",
+    "weapp-tailwindcss": "^4.0.4",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
