--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -75,7 +75,7 @@
     "@tarojs/vite-runner": "4.0.9",
     "@types/react": "^18.3.11",
     "@vitejs/plugin-react": "^4.3.4",
-    "@weapp-tailwindcss/merge": "^1.0.0-alpha.6",
+    "@weapp-tailwindcss/merge": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "babel-preset-taro": "4.0.9",
     "eslint": "^9.21.0",
@@ -95,6 +95,6 @@
     "typescript": "^5.7.3",
     "vite": "^6.1.1",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.4-alpha.0"
+    "weapp-tailwindcss": "^4.0.4"
   }
 }
