--- a/website/package.json
+++ b/website/package.json
@@ -28,7 +28,9 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "deploy:cos": "pnpm build && ice-deploy -c --dir=build",
-    "build:docs": "node scripts/index.js"
+    "build:docs": "node scripts/index.js",
+    "e2e": "playwright test",
+    "e2e:u": "playwright test -u"
   },
   "dependencies": {
     "@docusaurus/core": "3.7.0",
@@ -46,8 +48,10 @@
     "@docusaurus/tsconfig": "3.7.0",
     "@docusaurus/types": "3.7.0",
     "@icebreakers/deploy": "^0.1.6",
+    "@playwright/test": "^1.50.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.13.5",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.6",
