chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -58,13 +58,10 @@
     "e2e": "vitest run -c ./e2e/vitest.e2e.config.ts",
     "e2e:dev": "vitest -c ./e2e/vitest.e2e.config.ts",
     "e2e:u": "vitest run -u -c ./e2e/vitest.e2e.config.ts",
-    "demo:build": "node scripts/demo/build.js --babel && pnpm run build:apps",
-    "demo:bench": "node scripts/demo/bench.js",
-    "demo:install": "node scripts/demo/install.js",
-    "demo:install:beta": "node scripts/demo/install.js --beta",
-    "demo:install:alpha": "node scripts/demo/install.js --alpha",
-    "demo:sync-dist": "node scripts/demo/copy-dist.js",
-    "demo:del-dist": "node scripts/demo/del-dist.js",
+    "demo:build": "tsx scripts/demo/build.ts --babel && pnpm run build:apps",
+    "demo:install": "tsx scripts/demo/install.ts",
+    "demo:install:beta": "tsx scripts/demo/install.ts --beta",
+    "demo:install:alpha": "tsx scripts/demo/install.ts --alpha",
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw @weapp-tailwindcss/cli @weapp-tailwindcss/typography",
     "sync:all": "turbo run sync",
     "generate:readme": "tsx scripts/readme/write.ts",
@@ -193,6 +190,7 @@
     "klaw": "^4.1.0",
     "lightningcss": "^1.29.1",
     "lint-staged": "^15.4.3",
+    "local-pkg": "^1.1.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "micromatch": "^4.0.8",
