--- a/website/package.json
+++ b/website/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "@docusaurus/core": "3.7.0",
     "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-live-codeblock": "^3.7.0",
     "@mdx-js/react": "^3.1.0",
+    "@weapp-tailwindcss/merge": "workspace:*",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "prism-react-renderer": "^2.4.1",
