--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -31,6 +31,8 @@
     "tailwindcss": "catalog:tailwindcss4",
     "unplugin-vue-router": "^0.12.0",
     "vite": "^6.2.1",
-    "vue-tsc": "^2.2.8"
+    "vite-plugin-inspect": "^11.0.0",
+    "vue-tsc": "^2.2.8",
+    "weapp-tailwindcss": "workspace:*"
   }
 }
