chore(demo): upgrade

--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -94,7 +94,7 @@
     "unplugin-vue-components": "^28.0.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.11",
+    "weapp-tailwindcss": "^4.1.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   }
