--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -88,7 +88,7 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.11",
+    "weapp-tailwindcss": "^4.1.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
