--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -87,7 +87,7 @@
     "terser-webpack-plugin": "^5.3.11",
     "typescript": "~5.7.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.11",
+    "weapp-tailwindcss": "^4.1.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-chain": "^6.5.1"
