--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -70,7 +70,7 @@
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/preset-react": "^7.24.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tailwindcss/postcss": "^4.0.11",
+    "@tailwindcss/postcss": "^4.0.13",
     "@tarojs/cli": "4.0.9",
     "@tarojs/taro-loader": "4.0.9",
     "@tarojs/webpack5-runner": "4.0.9",
@@ -86,12 +86,12 @@
     "postcss": "^8.5.3",
     "react-refresh": "^0.16.0",
     "stylelint": "^16.15.0",
-    "tailwindcss": "^4.0.11",
+    "tailwindcss": "^4.0.13",
     "tailwindcss-patch": "^7.0.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.8.2",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.0.11",
+    "weapp-tailwindcss": "^4.1.0-alpha.2",
     "webpack": "5.98.0"
   }
 }
