docs: add icons for tailwindcss@4

--- a/demo/uni-app-tailwindcss-v4/package.json
+++ b/demo/uni-app-tailwindcss-v4/package.json
@@ -67,6 +67,9 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4040520250104002",
     "@dcloudio/uni-stacktracey": "3.0.0-4040520250104002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4040520250104002",
+    "@egoist/tailwindcss-icons": "^1.9.0",
+    "@iconify-json/lucide": "^1.2.29",
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.0.13",
     "@vue/runtime-core": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
