--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -36,7 +36,7 @@
     "@mpxjs/webpack-plugin": "^2.9.0",
     "@tailwindcss/postcss": "^4.0.14",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.0.6",
+    "@weapp-tailwindcss/merge": "^1.0.7",
     "autoprefixer": "^10.2.4",
     "eslint": "^7.0.0",
     "postcss": "^8.5.3",
@@ -47,7 +47,7 @@
     "tailwindcss-patch": "^7.0.2",
     "typescript": "^4.1.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.0-alpha.3",
+    "weapp-tailwindcss": "^4.1.0",
     "webpack": "^5.43.0"
   },
   "browserslist": [
