--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -75,7 +75,7 @@
     "@tarojs/vite-runner": "4.0.9",
     "@types/react": "^18.0.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "@weapp-tailwindcss/merge": "^1.0.6",
+    "@weapp-tailwindcss/merge": "^1.0.7",
     "babel-preset-taro": "4.0.9",
     "eslint": "^8.57.0",
     "eslint-config-taro": "4.0.9",
@@ -90,7 +90,7 @@
     "typescript": "^5.8.2",
     "vite": "^4.2.0",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.0-alpha.3"
+    "weapp-tailwindcss": "^4.1.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
