--- a/demo/taro-webpack-tailwindcss-v4/package.json
+++ b/demo/taro-webpack-tailwindcss-v4/package.json
@@ -77,7 +77,7 @@
     "@types/node": "^18",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@weapp-tailwindcss/merge": "^1.0.6",
+    "@weapp-tailwindcss/merge": "^1.0.7",
     "babel-preset-taro": "4.0.9",
     "eslint": "^8.57.0",
     "eslint-config-taro": "4.0.9",
@@ -91,7 +91,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.8.2",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.0-alpha.3",
+    "weapp-tailwindcss": "^4.1.0",
     "webpack": "5.98.0"
   }
 }
