--- a/demo/uni-app-webpack-tailwindcss-v4/package.json
+++ b/demo/uni-app-webpack-tailwindcss-v4/package.json
@@ -95,7 +95,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/merge": "^1.0.6",
+    "@weapp-tailwindcss/merge": "^1.0.7",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
@@ -106,7 +106,7 @@
     "typescript": "~4.5.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.0-alpha.3"
+    "weapp-tailwindcss": "^4.1.0"
   },
   "browserslist": [
     "Android >= 4.4",
