chore: bump version

--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "boxen": "^8.0.1",
+    "browserslist": "^4.24.4",
     "chokidar": "^4.0.3",
     "ci-info": "^4.2.0",
     "colorette": "^2.0.20",
@@ -232,7 +233,7 @@
     "uuid": "^11.1.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
-    "vite": "^6.2.4",
+    "vite": "^6.2.5",
     "vite-plugin-inspect": "^11.0.0",
     "vitest": "~3.1.1",
     "weapp-tailwindcss": "workspace:*",
