chore(demo): upgrade

--- a/demo/taro-webpack-tailwindcss-v4/project.private.config.json
+++ b/demo/taro-webpack-tailwindcss-v4/project.private.config.json
@@ -3,5 +3,6 @@
   "projectname": "taro-webpack-tailwindcss-v4",
   "setting": {
     "compileHotReLoad": true
-  }
+  },
+  "libVersion": "3.7.12"
 }
