--- a/demo/mpx-tailwindcss-v4/package.json
+++ b/demo/mpx-tailwindcss-v4/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "mpx-cli-service serve",
+    "dev": "mpx-cli-service serve",
     "build": "mpx-cli-service build",
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "open": "weapp open -p dist/wx"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.9.0",
-    "@mpxjs/core": "^2.9.0",
-    "@mpxjs/fetch": "^2.9.0",
-    "@mpxjs/pinia": "^2.9.0",
-    "@mpxjs/store": "^2.9.0",
-    "@mpxjs/utils": "^2.9.0",
+    "@mpxjs/api-proxy": "^2.10.3",
+    "@mpxjs/core": "^2.10.3",
+    "@mpxjs/fetch": "^2.10.3",
+    "@mpxjs/pinia": "^2.10.2",
+    "@mpxjs/store": "^2.10.2",
+    "@mpxjs/utils": "^2.10.2",
     "pinia": "^2.0.14",
     "vue": "^2.7.0",
     "vue-demi": "^0.14.6",
@@ -23,31 +23,31 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-transform-runtime": "^7.26.10",
     "@babel/preset-env": "^7.10.4",
-    "@babel/runtime-corejs3": "^7.10.4",
+    "@babel/runtime-corejs3": "^7.27.0",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.0",
     "@mpxjs/eslint-config-ts": "^1.0.5",
-    "@mpxjs/mpx-cli-service": "^2.0.0",
-    "@mpxjs/size-report": "^2.9.0",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.0.0",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.0.0",
-    "@mpxjs/webpack-plugin": "^2.9.0",
+    "@mpxjs/mpx-cli-service": "^2.1.28",
+    "@mpxjs/size-report": "^2.10.3",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.28",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.28",
+    "@mpxjs/webpack-plugin": "^2.10.3",
     "@tailwindcss/postcss": "^4.1.1",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/merge": "^1.1.0",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.0.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
-    "stylus": "^0.55.0",
-    "stylus-loader": "^6.1.0",
+    "stylus": "^0.64.0",
+    "stylus-loader": "^8.1.1",
     "tailwindcss": "^4.1.1",
     "tailwindcss-patch": "^7.1.0",
     "typescript": "^4.1.3",
     "weapp-ide-cli": "^2.0.10",
-    "weapp-tailwindcss": "^4.1.3",
+    "weapp-tailwindcss": "^4.1.4-alpha.0",
     "webpack": "^5.43.0"
   },
   "browserslist": [
