chore: add name for PackageJsonMissingNameError

--- a/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "uni-app-x-hbuilderx-tailwindcss3",
   "devDependencies": {
     "tailwindcss": "^3.4.17",
     "weapp-tailwindcss": "workspace:*"
