--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "uni-app-x-hbuilderx-tailwindcss4",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "tailwindcss": "^4.1.3",
