--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -1,5 +1,7 @@
 {
   "name": "uni-app-x-hbuilderx-tailwindcss4",
+  "version": "0.0.0",
+  "private": true,
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "tailwindcss": "^4.1.3",
