--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "@weapp-talwindcss/debug-uni-app-x": "workspace:*",
     "tailwindcss": "^4.1.4",
     "weapp-tailwindcss": "workspace:*"
   },
