chore: [Bug]: dark:hover生成空的媒体查询，导致语法错误。 #638

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@icebreakers/monorepo": "^0.7.11",
     "@icebreakers/stylelint-config": "^1.0.0",
     "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss4.1.4": "npm:@tailwindcss/postcss@4.1.4",
     "@tailwindcss/vite": "^4.1.5",
     "@tsconfig/recommended": "^1.0.8",
     "@types/babel__core": "^7.20.5",
@@ -220,6 +221,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss4": "catalog:tailwindcss4",
+    "tailwindcss4.1.4": "npm:tailwindcss@4.1.4",
     "terser-webpack-plugin": "^5.3.14",
     "traverse": "^0.6.11",
     "ts-morph": "^25.0.1",
