chore: bump version

--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -55,7 +55,7 @@
     "release": "pnpm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "postinstall": "node scripts/postinstall.js"
+    "postinstall": "node scripts/postinstall.cjs"
   },
   "publishConfig": {
     "exports": {
@@ -89,7 +89,7 @@
     "clsx": "^2.1.1",
     "local-pkg": "^1.1.1",
     "semver": "^7.7.1",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwind-merge-v2": "npm:tailwind-merge@^2.6.0"
   },
   "devDependencies": {
