--- a/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "@weapp-talwindcss/debug-uni-app-x": "workspace:*",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "catalog:tailwindcss4",
     "weapp-tailwindcss": "workspace:*"
   },
   "pnpm": {
