chore: commit postcss-html-transform

--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -90,7 +90,7 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "weapp-ide-cli": "^2.0.12",
-    "weapp-tailwindcss": "^4.1.7"
+    "weapp-tailwindcss": "^4.1.8-beta.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
