--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -55,7 +55,7 @@
     "release": "pnpm publish",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "postinstall": "node scripts/postinstall.cjs"
+    "_postinstall": "node scripts/postinstall.cjs"
   },
   "publishConfig": {
     "exports": {
